<resources>
    <string name="app_name">MyService</string>

    <string name="service">Service</string>
    <string name="start_service">Start Service</string>
    <string name="bind_service">Bind Service</string>

    <string name="intent_service">Intent Service</string>
    <string name="start_iservice1">Start IService1</string>
    <string name="start_iservice2">Start IService2</string>
</resources>