<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/service" />

        <Button
            android:id="@+id/start_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service" />

        <Button
            android:id="@+id/bind_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_service" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/service" />

        <Button
            android:id="@+id/start_iservice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_iservice1" />

        <Button
            android:id="@+id/start_iservice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_iservice2" />
    </LinearLayout>
</LinearLayout>